--- a/.gitattributes
+++ b/.gitattributes
@@ -11,6 +11,8 @@
 *.meta merge=unityyamlmerge eol=lf
 *.controller merge=unityyamlmerge eol=lf
 
+docs/*.md linguist-detectable
+docs/**/*.md linguist-detectable
 *.md linguist-detectable
 LICENSE.md -linguist-detectable
 README.md -linguist-detectable
